Made some changes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
  <body>
   <h1>GitHub Actions</h1>
-  <p>Example HTML webpage for the DevOps coursse at FINKI. </p>
+  <p>Example HTML webpage for the DevOps course at FINKI. </p>
  </body>
 </html>
